--- a/GuessTheWord-Starter/app/build.gradle
+++ b/GuessTheWord-Starter/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     // Navigation
     implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0"
     implementation "android.arch.navigation:navigation-ui-ktx:1.0.0"
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.1.0'
 }
